// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`paper templates > blank on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
]
`;

exports[`paper templates > calligraphySlants on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
  {
    "color": "#cadcf1",
    "dash": [
      1.5,
      2,
    ],
    "op": "lines",
    "segments": [
      36,
      36,
      180,
      36,
      36,
      146,
      180,
      146,
      36,
      93.13,
      76,
      36,
      38.98,
      146,
      116,
      36,
      78.98,
      146,
      156,
      36,
      118.98,
      146,
      180,
      58.85,
      158.98,
      146,
      180,
      115.98,
      36,
      166,
      180,
      166,
      36,
      276,
      180,
      276,
      36,
      223.13,
      76,
      166,
      38.98,
      276,
      116,
      166,
      78.98,
      276,
      156,
      166,
      118.98,
      276,
      180,
      188.85,
      158.98,
      276,
      180,
      245.98,
    ],
    "width": 0.4,
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      36,
      66,
      180,
      66,
      36,
      196,
      180,
      196,
    ],
    "width": 0.5,
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      36,
      116,
      180,
      116,
      36,
      246,
      180,
      246,
    ],
    "width": 1,
  },
]
`;

exports[`paper templates > cornell on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      0,
      96.75,
      216,
      96.75,
      0,
      117,
      216,
      117,
      0,
      137.25,
      216,
      137.25,
      0,
      157.5,
      216,
      157.5,
      0,
      177.75,
      216,
      177.75,
      0,
      198,
      216,
      198,
      0,
      218.25,
      216,
      218.25,
      0,
      238.5,
      216,
      238.5,
      0,
      258.75,
      216,
      258.75,
      0,
      308.25,
      216,
      308.25,
    ],
    "width": 0.5,
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      0,
      76.5,
      216,
      76.5,
      64.8,
      76.5,
      64.8,
      288,
      0,
      288,
      216,
      288,
    ],
    "width": 1,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7.0874999999999995,
    "text": "Topic",
    "weight": 400,
    "x": 36,
    "y": 70.5,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7.0874999999999995,
    "text": "Cues",
    "weight": 400,
    "x": 36,
    "y": 86.59,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7.0874999999999995,
    "text": "Notes",
    "weight": 400,
    "x": 70.8,
    "y": 86.59,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7.0874999999999995,
    "text": "Summary",
    "weight": 400,
    "x": 36,
    "y": 298.09,
  },
]
`;

exports[`paper templates > dotGrid on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
  {
    "color": "#cadcf1",
    "op": "dots",
    "points": [
      1.72,
      2.88,
      15.89,
      2.88,
      30.06,
      2.88,
      44.23,
      2.88,
      58.4,
      2.88,
      72.57,
      2.88,
      86.74,
      2.88,
      100.92,
      2.88,
      115.09,
      2.88,
      129.26,
      2.88,
      143.42,
      2.88,
      157.6,
      2.88,
      171.77,
      2.88,
      185.94,
      2.88,
      200.11,
      2.88,
      214.28,
      2.88,
      1.72,
      17.05,
      15.89,
      17.05,
      30.06,
      17.05,
      44.23,
      17.05,
      58.4,
      17.05,
      72.57,
      17.05,
      86.74,
      17.05,
      100.92,
      17.05,
      115.09,
      17.05,
      129.26,
      17.05,
      143.42,
      17.05,
      157.6,
      17.05,
      171.77,
      17.05,
      185.94,
      17.05,
      200.11,
      17.05,
      214.28,
      17.05,
      1.72,
      31.22,
      15.89,
      31.22,
      30.06,
      31.22,
      44.23,
      31.22,
      58.4,
      31.22,
      72.57,
      31.22,
      86.74,
      31.22,
      100.92,
      31.22,
      115.09,
      31.22,
      129.26,
      31.22,
      143.42,
      31.22,
      157.6,
      31.22,
      171.77,
      31.22,
      185.94,
      31.22,
      200.11,
      31.22,
      214.28,
      31.22,
      1.72,
      45.39,
      15.89,
      45.39,
      30.06,
      45.39,
      44.23,
      45.39,
      58.4,
      45.39,
      72.57,
      45.39,
      86.74,
      45.39,
      100.92,
      45.39,
      115.09,
      45.39,
      129.26,
      45.39,
      143.42,
      45.39,
      157.6,
      45.39,
      171.77,
      45.39,
      185.94,
      45.39,
      200.11,
      45.39,
      214.28,
      45.39,
      1.72,
      59.56,
      15.89,
      59.56,
      30.06,
      59.56,
      44.23,
      59.56,
      58.4,
      59.56,
      72.57,
      59.56,
      86.74,
      59.56,
      100.92,
      59.56,
      115.09,
      59.56,
      129.26,
      59.56,
      143.42,
      59.56,
      157.6,
      59.56,
      171.77,
      59.56,
      185.94,
      59.56,
      200.11,
      59.56,
      214.28,
      59.56,
      1.72,
      73.72,
      15.89,
      73.72,
      30.06,
      73.72,
      44.23,
      73.72,
      58.4,
      73.72,
      72.57,
      73.72,
      86.74,
      73.72,
      100.92,
      73.72,
      115.09,
      73.72,
      129.26,
      73.72,
      143.42,
      73.72,
      157.6,
      73.72,
      171.77,
      73.72,
      185.94,
      73.72,
      200.11,
      73.72,
      214.28,
      73.72,
      1.72,
      87.9,
      15.89,
      87.9,
      30.06,
      87.9,
      44.23,
      87.9,
      58.4,
      87.9,
      72.57,
      87.9,
      86.74,
      87.9,
      100.92,
      87.9,
      115.09,
      87.9,
      129.26,
      87.9,
      143.42,
      87.9,
      157.6,
      87.9,
      171.77,
      87.9,
      185.94,
      87.9,
      200.11,
      87.9,
      214.28,
      87.9,
      1.72,
      102.07,
      15.89,
      102.07,
      30.06,
      102.07,
      44.23,
      102.07,
      58.4,
      102.07,
      72.57,
      102.07,
      86.74,
      102.07,
      100.92,
      102.07,
      115.09,
      102.07,
      129.26,
      102.07,
      143.42,
      102.07,
      157.6,
      102.07,
      171.77,
      102.07,
      185.94,
      102.07,
      200.11,
      102.07,
      214.28,
      102.07,
      1.72,
      116.24,
      15.89,
      116.24,
      30.06,
      116.24,
      44.23,
      116.24,
      58.4,
      116.24,
      72.57,
      116.24,
      86.74,
      116.24,
      100.92,
      116.24,
      115.09,
      116.24,
      129.26,
      116.24,
      143.42,
      116.24,
      157.6,
      116.24,
      171.77,
      116.24,
      185.94,
      116.24,
      200.11,
      116.24,
      214.28,
      116.24,
      1.72,
      130.41,
      15.89,
      130.41,
      30.06,
      130.41,
      44.23,
      130.41,
      58.4,
      130.41,
      72.57,
      130.41,
      86.74,
      130.41,
      100.92,
      130.41,
      115.09,
      130.41,
      129.26,
      130.41,
      143.42,
      130.41,
      157.6,
      130.41,
      171.77,
      130.41,
      185.94,
      130.41,
      200.11,
      130.41,
      214.28,
      130.41,
      1.72,
      144.57,
      15.89,
      144.57,
      30.06,
      144.57,
      44.23,
      144.57,
      58.4,
      144.57,
      72.57,
      144.57,
      86.74,
      144.57,
      100.92,
      144.57,
      115.09,
      144.57,
      129.26,
      144.57,
      143.42,
      144.57,
      157.6,
      144.57,
      171.77,
      144.57,
      185.94,
      144.57,
      200.11,
      144.57,
      214.28,
      144.57,
      1.72,
      158.75,
      15.89,
      158.75,
      30.06,
      158.75,
      44.23,
      158.75,
      58.4,
      158.75,
      72.57,
      158.75,
      86.74,
      158.75,
      100.92,
      158.75,
      115.09,
      158.75,
      129.26,
      158.75,
      143.42,
      158.75,
      157.6,
      158.75,
      171.77,
      158.75,
      185.94,
      158.75,
      200.11,
      158.75,
      214.28,
      158.75,
      1.72,
      172.92,
      15.89,
      172.92,
      30.06,
      172.92,
      44.23,
      172.92,
      58.4,
      172.92,
      72.57,
      172.92,
      86.74,
      172.92,
      100.92,
      172.92,
      115.09,
      172.92,
      129.26,
      172.92,
      143.42,
      172.92,
      157.6,
      172.92,
      171.77,
      172.92,
      185.94,
      172.92,
      200.11,
      172.92,
      214.28,
      172.92,
      1.72,
      187.09,
      15.89,
      187.09,
      30.06,
      187.09,
      44.23,
      187.09,
      58.4,
      187.09,
      72.57,
      187.09,
      86.74,
      187.09,
      100.92,
      187.09,
      115.09,
      187.09,
      129.26,
      187.09,
      143.42,
      187.09,
      157.6,
      187.09,
      171.77,
      187.09,
      185.94,
      187.09,
      200.11,
      187.09,
      214.28,
      187.09,
      1.72,
      201.26,
      15.89,
      201.26,
      30.06,
      201.26,
      44.23,
      201.26,
      58.4,
      201.26,
      72.57,
      201.26,
      86.74,
      201.26,
      100.92,
      201.26,
      115.09,
      201.26,
      129.26,
      201.26,
      143.42,
      201.26,
      157.6,
      201.26,
      171.77,
      201.26,
      185.94,
      201.26,
      200.11,
      201.26,
      214.28,
      201.26,
      1.72,
      215.43,
      15.89,
      215.43,
      30.06,
      215.43,
      44.23,
      215.43,
      58.4,
      215.43,
      72.57,
      215.43,
      86.74,
      215.43,
      100.92,
      215.43,
      115.09,
      215.43,
      129.26,
      215.43,
      143.42,
      215.43,
      157.6,
      215.43,
      171.77,
      215.43,
      185.94,
      215.43,
      200.11,
      215.43,
      214.28,
      215.43,
      1.72,
      229.6,
      15.89,
      229.6,
      30.06,
      229.6,
      44.23,
      229.6,
      58.4,
      229.6,
      72.57,
      229.6,
      86.74,
      229.6,
      100.92,
      229.6,
      115.09,
      229.6,
      129.26,
      229.6,
      143.42,
      229.6,
      157.6,
      229.6,
      171.77,
      229.6,
      185.94,
      229.6,
      200.11,
      229.6,
      214.28,
      229.6,
      1.72,
      243.77,
      15.89,
      243.77,
      30.06,
      243.77,
      44.23,
      243.77,
      58.4,
      243.77,
      72.57,
      243.77,
      86.74,
      243.77,
      100.92,
      243.77,
      115.09,
      243.77,
      129.26,
      243.77,
      143.42,
      243.77,
      157.6,
      243.77,
      171.77,
      243.77,
      185.94,
      243.77,
      200.11,
      243.77,
      214.28,
      243.77,
      1.72,
      257.94,
      15.89,
      257.94,
      30.06,
      257.94,
      44.23,
      257.94,
      58.4,
      257.94,
      72.57,
      257.94,
      86.74,
      257.94,
      100.92,
      257.94,
      115.09,
      257.94,
      129.26,
      257.94,
      143.42,
      257.94,
      157.6,
      257.94,
      171.77,
      257.94,
      185.94,
      257.94,
      200.11,
      257.94,
      214.28,
      257.94,
      1.72,
      272.11,
      15.89,
      272.11,
      30.06,
      272.11,
      44.23,
      272.11,
      58.4,
      272.11,
      72.57,
      272.11,
      86.74,
      272.11,
      100.92,
      272.11,
      115.09,
      272.11,
      129.26,
      272.11,
      143.42,
      272.11,
      157.6,
      272.11,
      171.77,
      272.11,
      185.94,
      272.11,
      200.11,
      272.11,
      214.28,
      272.11,
      1.72,
      286.27,
      15.89,
      286.27,
      30.06,
      286.27,
      44.23,
      286.27,
      58.4,
      286.27,
      72.57,
      286.27,
      86.74,
      286.27,
      100.92,
      286.27,
      115.09,
      286.27,
      129.26,
      286.27,
      143.42,
      286.27,
      157.6,
      286.27,
      171.77,
      286.27,
      185.94,
      286.27,
      200.11,
      286.27,
      214.28,
      286.27,
      1.72,
      300.45,
      15.89,
      300.45,
      30.06,
      300.45,
      44.23,
      300.45,
      58.4,
      300.45,
      72.57,
      300.45,
      86.74,
      300.45,
      100.92,
      300.45,
      115.09,
      300.45,
      129.26,
      300.45,
      143.42,
      300.45,
      157.6,
      300.45,
      171.77,
      300.45,
      185.94,
      300.45,
      200.11,
      300.45,
      214.28,
      300.45,
      1.72,
      314.62,
      15.89,
      314.62,
      30.06,
      314.62,
      44.23,
      314.62,
      58.4,
      314.62,
      72.57,
      314.62,
      86.74,
      314.62,
      100.92,
      314.62,
      115.09,
      314.62,
      129.26,
      314.62,
      143.42,
      314.62,
      157.6,
      314.62,
      171.77,
      314.62,
      185.94,
      314.62,
      200.11,
      314.62,
      214.28,
      314.62,
      1.72,
      328.79,
      15.89,
      328.79,
      30.06,
      328.79,
      44.23,
      328.79,
      58.4,
      328.79,
      72.57,
      328.79,
      86.74,
      328.79,
      100.92,
      328.79,
      115.09,
      328.79,
      129.26,
      328.79,
      143.42,
      328.79,
      157.6,
      328.79,
      171.77,
      328.79,
      185.94,
      328.79,
      200.11,
      328.79,
      214.28,
      328.79,
      1.72,
      342.96,
      15.89,
      342.96,
      30.06,
      342.96,
      44.23,
      342.96,
      58.4,
      342.96,
      72.57,
      342.96,
      86.74,
      342.96,
      100.92,
      342.96,
      115.09,
      342.96,
      129.26,
      342.96,
      143.42,
      342.96,
      157.6,
      342.96,
      171.77,
      342.96,
      185.94,
      342.96,
      200.11,
      342.96,
      214.28,
      342.96,
      1.72,
      357.13,
      15.89,
      357.13,
      30.06,
      357.13,
      44.23,
      357.13,
      58.4,
      357.13,
      72.57,
      357.13,
      86.74,
      357.13,
      100.92,
      357.13,
      115.09,
      357.13,
      129.26,
      357.13,
      143.42,
      357.13,
      157.6,
      357.13,
      171.77,
      357.13,
      185.94,
      357.13,
      200.11,
      357.13,
      214.28,
      357.13,
    ],
    "radius": 0.71,
  },
]
`;

exports[`paper templates > engineering on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
  {
    "fill": null,
    "h": 36,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 144,
    "width": 1,
    "x": 36,
    "y": 36,
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      84,
      36,
      84,
      72,
      132,
      36,
      132,
      72,
      50.4,
      88.8,
      50.4,
      319.2,
      64.8,
      88.8,
      64.8,
      319.2,
      79.2,
      88.8,
      79.2,
      319.2,
      93.6,
      88.8,
      93.6,
      319.2,
      122.4,
      88.8,
      122.4,
      319.2,
      136.8,
      88.8,
      136.8,
      319.2,
      151.2,
      88.8,
      151.2,
      319.2,
      165.6,
      88.8,
      165.6,
      319.2,
      36,
      103.2,
      180,
      103.2,
      36,
      117.6,
      180,
      117.6,
      36,
      132,
      180,
      132,
      36,
      146.4,
      180,
      146.4,
      36,
      175.2,
      180,
      175.2,
      36,
      189.6,
      180,
      189.6,
      36,
      204,
      180,
      204,
      36,
      218.4,
      180,
      218.4,
      36,
      247.2,
      180,
      247.2,
      36,
      261.6,
      180,
      261.6,
      36,
      276,
      180,
      276,
      36,
      290.4,
      180,
      290.4,
      36,
      319.2,
      180,
      319.2,
    ],
    "width": 0.5,
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      36,
      88.8,
      36,
      319.2,
      108,
      88.8,
      108,
      319.2,
      180,
      88.8,
      180,
      319.2,
      36,
      88.8,
      180,
      88.8,
      36,
      160.8,
      180,
      160.8,
      36,
      232.8,
      180,
      232.8,
      36,
      304.8,
      180,
      304.8,
    ],
    "width": 1,
  },
]
`;

exports[`paper templates > graphWithAxes on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      22.98,
      24.13,
      22.98,
      335.87,
      93.83,
      24.13,
      93.83,
      335.87,
      164.68,
      24.13,
      164.68,
      335.87,
      22.98,
      24.13,
      193.02,
      24.13,
      22.98,
      94.98,
      193.02,
      94.98,
      22.98,
      165.83,
      193.02,
      165.83,
      22.98,
      236.68,
      193.02,
      236.68,
      22.98,
      307.53,
      193.02,
      307.53,
    ],
    "width": 1,
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      37.15,
      24.13,
      37.15,
      335.87,
      51.32,
      24.13,
      51.32,
      335.87,
      65.49,
      24.13,
      65.49,
      335.87,
      79.66,
      24.13,
      79.66,
      335.87,
      108,
      24.13,
      108,
      335.87,
      122.17,
      24.13,
      122.17,
      335.87,
      136.34,
      24.13,
      136.34,
      335.87,
      150.51,
      24.13,
      150.51,
      335.87,
      178.85,
      24.13,
      178.85,
      335.87,
      193.02,
      24.13,
      193.02,
      335.87,
      22.98,
      38.3,
      193.02,
      38.3,
      22.98,
      52.47,
      193.02,
      52.47,
      22.98,
      66.64,
      193.02,
      66.64,
      22.98,
      80.81,
      193.02,
      80.81,
      22.98,
      109.15,
      193.02,
      109.15,
      22.98,
      123.32,
      193.02,
      123.32,
      22.98,
      137.49,
      193.02,
      137.49,
      22.98,
      151.66,
      193.02,
      151.66,
      22.98,
      180,
      193.02,
      180,
      22.98,
      194.17,
      193.02,
      194.17,
      22.98,
      208.34,
      193.02,
      208.34,
      22.98,
      222.51,
      193.02,
      222.51,
      22.98,
      250.85,
      193.02,
      250.85,
      22.98,
      265.02,
      193.02,
      265.02,
      22.98,
      279.19,
      193.02,
      279.19,
      22.98,
      293.36,
      193.02,
      293.36,
      22.98,
      321.7,
      193.02,
      321.7,
      22.98,
      335.87,
      193.02,
      335.87,
    ],
    "width": 0.5,
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      108,
      24.13,
      108,
      335.87,
      22.98,
      180,
      193.02,
      180,
    ],
    "width": 1.5,
  },
]
`;

exports[`paper templates > grid on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      1.72,
      2.88,
      1.72,
      357.13,
      15.89,
      2.88,
      15.89,
      357.13,
      30.06,
      2.88,
      30.06,
      357.13,
      44.23,
      2.88,
      44.23,
      357.13,
      58.4,
      2.88,
      58.4,
      357.13,
      72.57,
      2.88,
      72.57,
      357.13,
      86.74,
      2.88,
      86.74,
      357.13,
      100.92,
      2.88,
      100.92,
      357.13,
      115.09,
      2.88,
      115.09,
      357.13,
      129.26,
      2.88,
      129.26,
      357.13,
      143.42,
      2.88,
      143.42,
      357.13,
      157.6,
      2.88,
      157.6,
      357.13,
      171.77,
      2.88,
      171.77,
      357.13,
      185.94,
      2.88,
      185.94,
      357.13,
      200.11,
      2.88,
      200.11,
      357.13,
      214.28,
      2.88,
      214.28,
      357.13,
      1.72,
      2.88,
      214.28,
      2.88,
      1.72,
      17.05,
      214.28,
      17.05,
      1.72,
      31.22,
      214.28,
      31.22,
      1.72,
      45.39,
      214.28,
      45.39,
      1.72,
      59.56,
      214.28,
      59.56,
      1.72,
      73.72,
      214.28,
      73.72,
      1.72,
      87.9,
      214.28,
      87.9,
      1.72,
      102.07,
      214.28,
      102.07,
      1.72,
      116.24,
      214.28,
      116.24,
      1.72,
      130.41,
      214.28,
      130.41,
      1.72,
      144.57,
      214.28,
      144.57,
      1.72,
      158.75,
      214.28,
      158.75,
      1.72,
      172.92,
      214.28,
      172.92,
      1.72,
      187.09,
      214.28,
      187.09,
      1.72,
      201.26,
      214.28,
      201.26,
      1.72,
      215.43,
      214.28,
      215.43,
      1.72,
      229.6,
      214.28,
      229.6,
      1.72,
      243.77,
      214.28,
      243.77,
      1.72,
      257.94,
      214.28,
      257.94,
      1.72,
      272.11,
      214.28,
      272.11,
      1.72,
      286.27,
      214.28,
      286.27,
      1.72,
      300.45,
      214.28,
      300.45,
      1.72,
      314.62,
      214.28,
      314.62,
      1.72,
      328.79,
      214.28,
      328.79,
      1.72,
      342.96,
      214.28,
      342.96,
      1.72,
      357.13,
      214.28,
      357.13,
    ],
    "width": 0.5,
  },
]
`;

exports[`paper templates > handwritingPractice on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      36,
      48,
      180,
      48,
      36,
      96,
      180,
      96,
      36,
      144,
      180,
      144,
      36,
      192,
      180,
      192,
      36,
      240,
      180,
      240,
      36,
      288,
      180,
      288,
    ],
    "width": 0.5,
  },
  {
    "color": "#cadcf1",
    "dash": [
      3,
      3,
    ],
    "op": "lines",
    "segments": [
      36,
      60,
      180,
      60,
      36,
      108,
      180,
      108,
      36,
      156,
      180,
      156,
      36,
      204,
      180,
      204,
      36,
      252,
      180,
      252,
      36,
      300,
      180,
      300,
    ],
    "width": 0.5,
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      36,
      72,
      180,
      72,
      36,
      120,
      180,
      120,
      36,
      168,
      180,
      168,
      36,
      216,
      180,
      216,
      36,
      264,
      180,
      264,
      36,
      312,
      180,
      312,
    ],
    "width": 1,
  },
  {
    "color": "#cadcf1",
    "dash": [
      1.5,
      2,
    ],
    "op": "lines",
    "segments": [
      36,
      84,
      180,
      84,
      36,
      132,
      180,
      132,
      36,
      180,
      180,
      180,
      36,
      228,
      180,
      228,
      36,
      276,
      180,
      276,
      36,
      324,
      180,
      324,
    ],
    "width": 0.4,
  },
]
`;

exports[`paper templates > hex on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      14,
      0,
      7,
      12.12,
      7,
      12.12,
      0,
      12.12,
      14,
      24.25,
      7,
      36.37,
      7,
      36.37,
      0,
      36.37,
      7,
      12.12,
      14,
      24.25,
      14,
      48.5,
      7,
      60.62,
      7,
      60.62,
      0,
      60.62,
      7,
      36.37,
      14,
      48.5,
      14,
      72.75,
      7,
      84.87,
      7,
      84.87,
      0,
      84.87,
      7,
      60.62,
      14,
      72.75,
      14,
      96.99,
      7,
      109.12,
      7,
      109.12,
      0,
      109.12,
      7,
      84.87,
      14,
      96.99,
      14,
      121.24,
      7,
      133.37,
      7,
      133.37,
      0,
      133.37,
      7,
      109.12,
      14,
      121.24,
      14,
      145.49,
      7,
      157.62,
      7,
      157.62,
      0,
      157.62,
      7,
      133.37,
      14,
      145.49,
      14,
      169.74,
      7,
      181.87,
      7,
      181.87,
      0,
      181.87,
      7,
      157.62,
      14,
      169.74,
      14,
      193.99,
      7,
      206.11,
      7,
      206.11,
      0,
      206.11,
      7,
      181.87,
      14,
      193.99,
      14,
      218.24,
      7,
      230.36,
      7,
      230.36,
      0,
      230.36,
      7,
      206.11,
      14,
      218.24,
      14,
      242.49,
      7,
      254.61,
      7,
      254.61,
      0,
      254.61,
      7,
      230.36,
      14,
      242.49,
      14,
      266.74,
      7,
      278.86,
      7,
      278.86,
      0,
      278.86,
      7,
      254.61,
      14,
      266.74,
      14,
      290.98,
      7,
      303.11,
      7,
      303.11,
      0,
      303.11,
      7,
      278.86,
      14,
      290.98,
      14,
      315.23,
      7,
      327.36,
      7,
      327.36,
      0,
      327.36,
      7,
      303.11,
      14,
      315.23,
      14,
      339.48,
      7,
      351.61,
      7,
      351.61,
      0,
      351.61,
      7,
      327.36,
      14,
      339.48,
      7,
      351.61,
      11.85,
      360,
      28,
      0,
      14,
      0,
      35,
      12.12,
      28,
      24.25,
      28,
      24.25,
      14,
      24.25,
      14,
      0,
      17.5,
      0,
      28,
      0,
      35,
      12.12,
      35,
      36.37,
      28,
      48.5,
      28,
      48.5,
      14,
      48.5,
      28,
      24.25,
      35,
      36.37,
      35,
      60.62,
      28,
      72.75,
      28,
      72.75,
      14,
      72.75,
      28,
      48.5,
      35,
      60.62,
      35,
      84.87,
      28,
      96.99,
      28,
      96.99,
      14,
      96.99,
      28,
      72.75,
      35,
      84.87,
      35,
      109.12,
      28,
      121.24,
      28,
      121.24,
      14,
      121.24,
      28,
      96.99,
      35,
      109.12,
      35,
      133.37,
      28,
      145.49,
      28,
      145.49,
      14,
      145.49,
      28,
      121.24,
      35,
      133.37,
      35,
      157.62,
      28,
      169.74,
      28,
      169.74,
      14,
      169.74,
      28,
      145.49,
      35,
      157.62,
      35,
      181.87,
      28,
      193.99,
      28,
      193.99,
      14,
      193.99,
      28,
      169.74,
      35,
      181.87,
      35,
      206.11,
      28,
      218.24,
      28,
      218.24,
      14,
      218.24,
      28,
      193.99,
      35,
      206.11,
      35,
      230.36,
      28,
      242.49,
      28,
      242.49,
      14,
      242.49,
      28,
      218.24,
      35,
      230.36,
      35,
      254.61,
      28,
      266.74,
      28,
      266.74,
      14,
      266.74,
      28,
      242.49,
      35,
      254.61,
      35,
      278.86,
      28,
      290.98,
      28,
      290.98,
      14,
      290.98,
      28,
      266.74,
      35,
      278.86,
      35,
      303.11,
      28,
      315.23,
      28,
      315.23,
      14,
      315.23,
      28,
      290.98,
      35,
      303.11,
      35,
      327.36,
      28,
      339.48,
      28,
      339.48,
      14,
      339.48,
      28,
      315.23,
      35,
      327.36,
      35,
      351.61,
      30.15,
      360,
      28,
      339.48,
      35,
      351.61,
      56,
      0,
      49,
      12.12,
      49,
      12.12,
      35,
      12.12,
      35,
      12.12,
      28,
      0,
      56,
      24.25,
      49,
      36.37,
      49,
      36.37,
      35,
      36.37,
      49,
      12.12,
      56,
      24.25,
      56,
      48.5,
      49,
      60.62,
      49,
      60.62,
      35,
      60.62,
      49,
      36.37,
      56,
      48.5,
      56,
      72.75,
      49,
      84.87,
      49,
      84.87,
      35,
      84.87,
      49,
      60.62,
      56,
      72.75,
      56,
      96.99,
      49,
      109.12,
      49,
      109.12,
      35,
      109.12,
      49,
      84.87,
      56,
      96.99,
      56,
      121.24,
      49,
      133.37,
      49,
      133.37,
      35,
      133.37,
      49,
      109.12,
      56,
      121.24,
      56,
      145.49,
      49,
      157.62,
      49,
      157.62,
      35,
      157.62,
      49,
      133.37,
      56,
      145.49,
      56,
      169.74,
      49,
      181.87,
      49,
      181.87,
      35,
      181.87,
      49,
      157.62,
      56,
      169.74,
      56,
      193.99,
      49,
      206.11,
      49,
      206.11,
      35,
      206.11,
      49,
      181.87,
      56,
      193.99,
      56,
      218.24,
      49,
      230.36,
      49,
      230.36,
      35,
      230.36,
      49,
      206.11,
      56,
      218.24,
      56,
      242.49,
      49,
      254.61,
      49,
      254.61,
      35,
      254.61,
      49,
      230.36,
      56,
      242.49,
      56,
      266.74,
      49,
      278.86,
      49,
      278.86,
      35,
      278.86,
      49,
      254.61,
      56,
      266.74,
      56,
      290.98,
      49,
      303.11,
      49,
      303.11,
      35,
      303.11,
      49,
      278.86,
      56,
      290.98,
      56,
      315.23,
      49,
      327.36,
      49,
      327.36,
      35,
      327.36,
      49,
      303.11,
      56,
      315.23,
      56,
      339.48,
      49,
      351.61,
      49,
      351.61,
      35,
      351.61,
      49,
      327.36,
      56,
      339.48,
      49,
      351.61,
      53.85,
      360,
      70,
      0,
      56,
      0,
      77,
      12.12,
      70,
      24.25,
      70,
      24.25,
      56,
      24.25,
      56,
      0,
      59.5,
      0,
      70,
      0,
      77,
      12.12,
      77,
      36.37,
      70,
      48.5,
      70,
      48.5,
      56,
      48.5,
      70,
      24.25,
      77,
      36.37,
      77,
      60.62,
      70,
      72.75,
      70,
      72.75,
      56,
      72.75,
      70,
      48.5,
      77,
      60.62,
      77,
      84.87,
      70,
      96.99,
      70,
      96.99,
      56,
      96.99,
      70,
      72.75,
      77,
      84.87,
      77,
      109.12,
      70,
      121.24,
      70,
      121.24,
      56,
      121.24,
      70,
      96.99,
      77,
      109.12,
      77,
      133.37,
      70,
      145.49,
      70,
      145.49,
      56,
      145.49,
      70,
      121.24,
      77,
      133.37,
      77,
      157.62,
      70,
      169.74,
      70,
      169.74,
      56,
      169.74,
      70,
      145.49,
      77,
      157.62,
      77,
      181.87,
      70,
      193.99,
      70,
      193.99,
      56,
      193.99,
      70,
      169.74,
      77,
      181.87,
      77,
      206.11,
      70,
      218.24,
      70,
      218.24,
      56,
      218.24,
      70,
      193.99,
      77,
      206.11,
      77,
      230.36,
      70,
      242.49,
      70,
      242.49,
      56,
      242.49,
      70,
      218.24,
      77,
      230.36,
      77,
      254.61,
      70,
      266.74,
      70,
      266.74,
      56,
      266.74,
      70,
      242.49,
      77,
      254.61,
      77,
      278.86,
      70,
      290.98,
      70,
      290.98,
      56,
      290.98,
      70,
      266.74,
      77,
      278.86,
      77,
      303.11,
      70,
      315.23,
      70,
      315.23,
      56,
      315.23,
      70,
      290.98,
      77,
      303.11,
      77,
      327.36,
      70,
      339.48,
      70,
      339.48,
      56,
      339.48,
      70,
      315.23,
      77,
      327.36,
      77,
      351.61,
      72.15,
      360,
      70,
      339.48,
      77,
      351.61,
      98,
      0,
      91,
      12.12,
      91,
      12.12,
      77,
      12.12,
      77,
      12.12,
      70,
      0,
      98,
      24.25,
      91,
      36.37,
      91,
      36.37,
      77,
      36.37,
      91,
      12.12,
      98,
      24.25,
      98,
      48.5,
      91,
      60.62,
      91,
      60.62,
      77,
      60.62,
      91,
      36.37,
      98,
      48.5,
      98,
      72.75,
      91,
      84.87,
      91,
      84.87,
      77,
      84.87,
      91,
      60.62,
      98,
      72.75,
      98,
      96.99,
      91,
      109.12,
      91,
      109.12,
      77,
      109.12,
      91,
      84.87,
      98,
      96.99,
      98,
      121.24,
      91,
      133.37,
      91,
      133.37,
      77,
      133.37,
      91,
      109.12,
      98,
      121.24,
      98,
      145.49,
      91,
      157.62,
      91,
      157.62,
      77,
      157.62,
      91,
      133.37,
      98,
      145.49,
      98,
      169.74,
      91,
      181.87,
      91,
      181.87,
      77,
      181.87,
      91,
      157.62,
      98,
      169.74,
      98,
      193.99,
      91,
      206.11,
      91,
      206.11,
      77,
      206.11,
      91,
      181.87,
      98,
      193.99,
      98,
      218.24,
      91,
      230.36,
      91,
      230.36,
      77,
      230.36,
      91,
      206.11,
      98,
      218.24,
      98,
      242.49,
      91,
      254.61,
      91,
      254.61,
      77,
      254.61,
      91,
      230.36,
      98,
      242.49,
      98,
      266.74,
      91,
      278.86,
      91,
      278.86,
      77,
      278.86,
      91,
      254.61,
      98,
      266.74,
      98,
      290.98,
      91,
      303.11,
      91,
      303.11,
      77,
      303.11,
      91,
      278.86,
      98,
      290.98,
      98,
      315.23,
      91,
      327.36,
      91,
      327.36,
      77,
      327.36,
      91,
      303.11,
      98,
      315.23,
      98,
      339.48,
      91,
      351.61,
      91,
      351.61,
      77,
      351.61,
      91,
      327.36,
      98,
      339.48,
      91,
      351.61,
      95.85,
      360,
      112,
      0,
      98,
      0,
      119,
      12.12,
      112,
      24.25,
      112,
      24.25,
      98,
      24.25,
      98,
      0,
      101.5,
      0,
      112,
      0,
      119,
      12.12,
      119,
      36.37,
      112,
      48.5,
      112,
      48.5,
      98,
      48.5,
      112,
      24.25,
      119,
      36.37,
      119,
      60.62,
      112,
      72.75,
      112,
      72.75,
      98,
      72.75,
      112,
      48.5,
      119,
      60.62,
      119,
      84.87,
      112,
      96.99,
      112,
      96.99,
      98,
      96.99,
      112,
      72.75,
      119,
      84.87,
      119,
      109.12,
      112,
      121.24,
      112,
      121.24,
      98,
      121.24,
      112,
      96.99,
      119,
      109.12,
      119,
      133.37,
      112,
      145.49,
      112,
      145.49,
      98,
      145.49,
      112,
      121.24,
      119,
      133.37,
      119,
      157.62,
      112,
      169.74,
      112,
      169.74,
      98,
      169.74,
      112,
      145.49,
      119,
      157.62,
      119,
      181.87,
      112,
      193.99,
      112,
      193.99,
      98,
      193.99,
      112,
      169.74,
      119,
      181.87,
      119,
      206.11,
      112,
      218.24,
      112,
      218.24,
      98,
      218.24,
      112,
      193.99,
      119,
      206.11,
      119,
      230.36,
      112,
      242.49,
      112,
      242.49,
      98,
      242.49,
      112,
      218.24,
      119,
      230.36,
      119,
      254.61,
      112,
      266.74,
      112,
      266.74,
      98,
      266.74,
      112,
      242.49,
      119,
      254.61,
      119,
      278.86,
      112,
      290.98,
      112,
      290.98,
      98,
      290.98,
      112,
      266.74,
      119,
      278.86,
      119,
      303.11,
      112,
      315.23,
      112,
      315.23,
      98,
      315.23,
      112,
      290.98,
      119,
      303.11,
      119,
      327.36,
      112,
      339.48,
      112,
      339.48,
      98,
      339.48,
      112,
      315.23,
      119,
      327.36,
      119,
      351.61,
      114.15,
      360,
      112,
      339.48,
      119,
      351.61,
      140,
      0,
      133,
      12.12,
      133,
      12.12,
      119,
      12.12,
      119,
      12.12,
      112,
      0,
      140,
      24.25,
      133,
      36.37,
      133,
      36.37,
      119,
      36.37,
      133,
      12.12,
      140,
      24.25,
      140,
      48.5,
      133,
      60.62,
      133,
      60.62,
      119,
      60.62,
      133,
      36.37,
      140,
      48.5,
      140,
      72.75,
      133,
      84.87,
      133,
      84.87,
      119,
      84.87,
      133,
      60.62,
      140,
      72.75,
      140,
      96.99,
      133,
      109.12,
      133,
      109.12,
      119,
      109.12,
      133,
      84.87,
      140,
      96.99,
      140,
      121.24,
      133,
      133.37,
      133,
      133.37,
      119,
      133.37,
      133,
      109.12,
      140,
      121.24,
      140,
      145.49,
      133,
      157.62,
      133,
      157.62,
      119,
      157.62,
      133,
      133.37,
      140,
      145.49,
      140,
      169.74,
      133,
      181.87,
      133,
      181.87,
      119,
      181.87,
      133,
      157.62,
      140,
      169.74,
      140,
      193.99,
      133,
      206.11,
      133,
      206.11,
      119,
      206.11,
      133,
      181.87,
      140,
      193.99,
      140,
      218.24,
      133,
      230.36,
      133,
      230.36,
      119,
      230.36,
      133,
      206.11,
      140,
      218.24,
      140,
      242.49,
      133,
      254.61,
      133,
      254.61,
      119,
      254.61,
      133,
      230.36,
      140,
      242.49,
      140,
      266.74,
      133,
      278.86,
      133,
      278.86,
      119,
      278.86,
      133,
      254.61,
      140,
      266.74,
      140,
      290.98,
      133,
      303.11,
      133,
      303.11,
      119,
      303.11,
      133,
      278.86,
      140,
      290.98,
      140,
      315.23,
      133,
      327.36,
      133,
      327.36,
      119,
      327.36,
      133,
      303.11,
      140,
      315.23,
      140,
      339.48,
      133,
      351.61,
      133,
      351.61,
      119,
      351.61,
      133,
      327.36,
      140,
      339.48,
      133,
      351.61,
      137.85,
      360,
      154,
      0,
      140,
      0,
      161,
      12.12,
      154,
      24.25,
      154,
      24.25,
      140,
      24.25,
      140,
      0,
      143.5,
      0,
      154,
      0,
      161,
      12.12,
      161,
      36.37,
      154,
      48.5,
      154,
      48.5,
      140,
      48.5,
      154,
      24.25,
      161,
      36.37,
      161,
      60.62,
      154,
      72.75,
      154,
      72.75,
      140,
      72.75,
      154,
      48.5,
      161,
      60.62,
      161,
      84.87,
      154,
      96.99,
      154,
      96.99,
      140,
      96.99,
      154,
      72.75,
      161,
      84.87,
      161,
      109.12,
      154,
      121.24,
      154,
      121.24,
      140,
      121.24,
      154,
      96.99,
      161,
      109.12,
      161,
      133.37,
      154,
      145.49,
      154,
      145.49,
      140,
      145.49,
      154,
      121.24,
      161,
      133.37,
      161,
      157.62,
      154,
      169.74,
      154,
      169.74,
      140,
      169.74,
      154,
      145.49,
      161,
      157.62,
      161,
      181.87,
      154,
      193.99,
      154,
      193.99,
      140,
      193.99,
      154,
      169.74,
      161,
      181.87,
      161,
      206.11,
      154,
      218.24,
      154,
      218.24,
      140,
      218.24,
      154,
      193.99,
      161,
      206.11,
      161,
      230.36,
      154,
      242.49,
      154,
      242.49,
      140,
      242.49,
      154,
      218.24,
      161,
      230.36,
      161,
      254.61,
      154,
      266.74,
      154,
      266.74,
      140,
      266.74,
      154,
      242.49,
      161,
      254.61,
      161,
      278.86,
      154,
      290.98,
      154,
      290.98,
      140,
      290.98,
      154,
      266.74,
      161,
      278.86,
      161,
      303.11,
      154,
      315.23,
      154,
      315.23,
      140,
      315.23,
      154,
      290.98,
      161,
      303.11,
      161,
      327.36,
      154,
      339.48,
      154,
      339.48,
      140,
      339.48,
      154,
      315.23,
      161,
      327.36,
      161,
      351.61,
      156.15,
      360,
      154,
      339.48,
      161,
      351.61,
      182,
      0,
      175,
      12.12,
      175,
      12.12,
      161,
      12.12,
      161,
      12.12,
      154,
      0,
      182,
      24.25,
      175,
      36.37,
      175,
      36.37,
      161,
      36.37,
      175,
      12.12,
      182,
      24.25,
      182,
      48.5,
      175,
      60.62,
      175,
      60.62,
      161,
      60.62,
      175,
      36.37,
      182,
      48.5,
      182,
      72.75,
      175,
      84.87,
      175,
      84.87,
      161,
      84.87,
      175,
      60.62,
      182,
      72.75,
      182,
      96.99,
      175,
      109.12,
      175,
      109.12,
      161,
      109.12,
      175,
      84.87,
      182,
      96.99,
      182,
      121.24,
      175,
      133.37,
      175,
      133.37,
      161,
      133.37,
      175,
      109.12,
      182,
      121.24,
      182,
      145.49,
      175,
      157.62,
      175,
      157.62,
      161,
      157.62,
      175,
      133.37,
      182,
      145.49,
      182,
      169.74,
      175,
      181.87,
      175,
      181.87,
      161,
      181.87,
      175,
      157.62,
      182,
      169.74,
      182,
      193.99,
      175,
      206.11,
      175,
      206.11,
      161,
      206.11,
      175,
      181.87,
      182,
      193.99,
      182,
      218.24,
      175,
      230.36,
      175,
      230.36,
      161,
      230.36,
      175,
      206.11,
      182,
      218.24,
      182,
      242.49,
      175,
      254.61,
      175,
      254.61,
      161,
      254.61,
      175,
      230.36,
      182,
      242.49,
      182,
      266.74,
      175,
      278.86,
      175,
      278.86,
      161,
      278.86,
      175,
      254.61,
      182,
      266.74,
      182,
      290.98,
      175,
      303.11,
      175,
      303.11,
      161,
      303.11,
      175,
      278.86,
      182,
      290.98,
      182,
      315.23,
      175,
      327.36,
      175,
      327.36,
      161,
      327.36,
      175,
      303.11,
      182,
      315.23,
      182,
      339.48,
      175,
      351.61,
      175,
      351.61,
      161,
      351.61,
      175,
      327.36,
      182,
      339.48,
      175,
      351.61,
      179.85,
      360,
      196,
      0,
      182,
      0,
      203,
      12.12,
      196,
      24.25,
      196,
      24.25,
      182,
      24.25,
      182,
      0,
      185.5,
      0,
      196,
      0,
      203,
      12.12,
      203,
      36.37,
      196,
      48.5,
      196,
      48.5,
      182,
      48.5,
      196,
      24.25,
      203,
      36.37,
      203,
      60.62,
      196,
      72.75,
      196,
      72.75,
      182,
      72.75,
      196,
      48.5,
      203,
      60.62,
      203,
      84.87,
      196,
      96.99,
      196,
      96.99,
      182,
      96.99,
      196,
      72.75,
      203,
      84.87,
      203,
      109.12,
      196,
      121.24,
      196,
      121.24,
      182,
      121.24,
      196,
      96.99,
      203,
      109.12,
      203,
      133.37,
      196,
      145.49,
      196,
      145.49,
      182,
      145.49,
      196,
      121.24,
      203,
      133.37,
      203,
      157.62,
      196,
      169.74,
      196,
      169.74,
      182,
      169.74,
      196,
      145.49,
      203,
      157.62,
      203,
      181.87,
      196,
      193.99,
      196,
      193.99,
      182,
      193.99,
      196,
      169.74,
      203,
      181.87,
      203,
      206.11,
      196,
      218.24,
      196,
      218.24,
      182,
      218.24,
      196,
      193.99,
      203,
      206.11,
      203,
      230.36,
      196,
      242.49,
      196,
      242.49,
      182,
      242.49,
      196,
      218.24,
      203,
      230.36,
      203,
      254.61,
      196,
      266.74,
      196,
      266.74,
      182,
      266.74,
      196,
      242.49,
      203,
      254.61,
      203,
      278.86,
      196,
      290.98,
      196,
      290.98,
      182,
      290.98,
      196,
      266.74,
      203,
      278.86,
      203,
      303.11,
      196,
      315.23,
      196,
      315.23,
      182,
      315.23,
      196,
      290.98,
      203,
      303.11,
      203,
      327.36,
      196,
      339.48,
      196,
      339.48,
      182,
      339.48,
      196,
      315.23,
      203,
      327.36,
      203,
      351.61,
      198.15,
      360,
      196,
      339.48,
      203,
      351.61,
      216,
      12.12,
      203,
      12.12,
      203,
      12.12,
      196,
      0,
      216,
      36.37,
      203,
      36.37,
      216,
      60.62,
      203,
      60.62,
      216,
      84.87,
      203,
      84.87,
      216,
      109.12,
      203,
      109.12,
      216,
      133.37,
      203,
      133.37,
      216,
      157.62,
      203,
      157.62,
      216,
      181.87,
      203,
      181.87,
      216,
      206.11,
      203,
      206.11,
      216,
      230.36,
      203,
      230.36,
      216,
      254.61,
      203,
      254.61,
      216,
      278.86,
      203,
      278.86,
      216,
      303.11,
      203,
      303.11,
      216,
      327.36,
      203,
      327.36,
      216,
      351.61,
      203,
      351.61,
    ],
    "width": 0.5,
  },
]
`;

exports[`paper templates > isometric on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      204.99,
      0,
      204.99,
      360,
      191.14,
      0,
      191.14,
      360,
      177.28,
      0,
      177.28,
      360,
      163.43,
      0,
      163.43,
      360,
      149.57,
      0,
      149.57,
      360,
      135.71,
      0,
      135.71,
      360,
      121.86,
      0,
      121.86,
      360,
      108,
      0,
      108,
      360,
      94.14,
      0,
      94.14,
      360,
      80.29,
      0,
      80.29,
      360,
      66.43,
      0,
      66.43,
      360,
      52.57,
      0,
      52.57,
      360,
      38.72,
      0,
      38.72,
      360,
      24.86,
      0,
      24.86,
      360,
      11.01,
      0,
      11.01,
      360,
      211.92,
      0,
      216,
      2.35,
      184.21,
      0,
      216,
      18.35,
      156.5,
      0,
      216,
      34.35,
      128.78,
      0,
      216,
      50.35,
      101.07,
      0,
      216,
      66.35,
      73.36,
      0,
      216,
      82.35,
      45.65,
      0,
      216,
      98.35,
      17.93,
      0,
      216,
      114.35,
      0,
      5.65,
      216,
      130.35,
      0,
      21.65,
      216,
      146.35,
      0,
      37.65,
      216,
      162.35,
      0,
      53.65,
      216,
      178.35,
      0,
      69.65,
      216,
      194.35,
      0,
      85.65,
      216,
      210.35,
      0,
      101.65,
      216,
      226.35,
      0,
      117.65,
      216,
      242.35,
      0,
      133.65,
      216,
      258.35,
      0,
      149.65,
      216,
      274.35,
      0,
      165.65,
      216,
      290.35,
      0,
      181.65,
      216,
      306.35,
      0,
      197.65,
      216,
      322.35,
      0,
      213.65,
      216,
      338.35,
      0,
      229.65,
      216,
      354.35,
      0,
      245.65,
      198.07,
      360,
      0,
      261.65,
      170.35,
      360,
      0,
      277.65,
      142.64,
      360,
      0,
      293.65,
      114.93,
      360,
      0,
      309.65,
      87.22,
      360,
      0,
      325.65,
      59.5,
      360,
      0,
      341.65,
      31.79,
      360,
      0,
      357.65,
      4.08,
      360,
      216,
      357.65,
      211.92,
      360,
      216,
      341.65,
      184.21,
      360,
      216,
      325.65,
      156.5,
      360,
      216,
      309.65,
      128.78,
      360,
      216,
      293.65,
      101.07,
      360,
      216,
      277.65,
      73.36,
      360,
      216,
      261.65,
      45.65,
      360,
      216,
      245.65,
      17.93,
      360,
      216,
      229.65,
      0,
      354.35,
      216,
      213.65,
      0,
      338.35,
      216,
      197.65,
      0,
      322.35,
      216,
      181.65,
      -0,
      306.35,
      216,
      165.65,
      -0,
      290.35,
      216,
      149.65,
      0,
      274.35,
      216,
      133.65,
      0,
      258.35,
      216,
      117.65,
      0,
      242.35,
      216,
      101.65,
      0,
      226.35,
      216,
      85.65,
      0,
      210.35,
      216,
      69.65,
      0,
      194.35,
      216,
      53.65,
      0,
      178.35,
      216,
      37.65,
      0,
      162.35,
      216,
      21.65,
      0,
      146.35,
      216,
      5.65,
      0,
      130.35,
      198.07,
      0,
      -0,
      114.35,
      170.35,
      0,
      0,
      98.35,
      142.64,
      0,
      0,
      82.35,
      114.93,
      0,
      0,
      66.35,
      87.22,
      0,
      0,
      50.35,
      59.5,
      0,
      0,
      34.35,
      31.79,
      0,
      0,
      18.35,
      4.08,
      0,
      0,
      2.35,
    ],
    "width": 0.5,
  },
]
`;

exports[`paper templates > musicStaff on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      42,
      57.6,
      174,
      57.6,
      42,
      64.8,
      174,
      64.8,
      42,
      72,
      174,
      72,
      42,
      79.2,
      174,
      79.2,
      42,
      86.4,
      174,
      86.4,
      42,
      129.6,
      174,
      129.6,
      42,
      136.8,
      174,
      136.8,
      42,
      144,
      174,
      144,
      42,
      151.2,
      174,
      151.2,
      42,
      158.4,
      174,
      158.4,
      42,
      201.6,
      174,
      201.6,
      42,
      208.8,
      174,
      208.8,
      42,
      216,
      174,
      216,
      42,
      223.2,
      174,
      223.2,
      42,
      230.4,
      174,
      230.4,
      42,
      273.6,
      174,
      273.6,
      42,
      280.8,
      174,
      280.8,
      42,
      288,
      174,
      288,
      42,
      295.2,
      174,
      295.2,
      42,
      302.4,
      174,
      302.4,
    ],
    "width": 0.5,
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      42,
      57.6,
      42,
      86.4,
      174,
      57.6,
      174,
      86.4,
      42,
      129.6,
      42,
      158.4,
      174,
      129.6,
      174,
      158.4,
      42,
      201.6,
      42,
      230.4,
      174,
      201.6,
      174,
      230.4,
      42,
      273.6,
      42,
      302.4,
      174,
      273.6,
      174,
      302.4,
    ],
    "width": 1,
  },
]
`;

exports[`paper templates > plannerDaily on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 9,
    "text": "Date",
    "weight": 600,
    "x": 36,
    "y": 50,
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      36,
      64,
      180,
      64,
    ],
    "width": 1,
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      125.28,
      72,
      125.28,
      324,
      36,
      76,
      117.28,
      76,
      36,
      93.71,
      117.28,
      93.71,
      36,
      111.43,
      117.28,
      111.43,
      36,
      129.14,
      117.28,
      129.14,
      36,
      146.86,
      117.28,
      146.86,
      36,
      164.57,
      117.28,
      164.57,
      36,
      182.29,
      117.28,
      182.29,
      36,
      200,
      117.28,
      200,
      36,
      217.71,
      117.28,
      217.71,
      36,
      235.43,
      117.28,
      235.43,
      36,
      253.14,
      117.28,
      253.14,
      36,
      270.86,
      117.28,
      270.86,
      36,
      288.57,
      117.28,
      288.57,
      36,
      306.29,
      117.28,
      306.29,
      36,
      324,
      117.28,
      324,
      151.28,
      98,
      180,
      98,
      151.28,
      120,
      180,
      120,
      151.28,
      142,
      180,
      142,
      151.28,
      164,
      180,
      164,
      151.28,
      186,
      180,
      186,
      151.28,
      208,
      180,
      208,
      137.28,
      270,
      180,
      270,
      137.28,
      292,
      180,
      292,
      137.28,
      314,
      180,
      314,
    ],
    "width": 0.5,
  },
  {
    "color": "#cadcf1",
    "dash": [
      1.5,
      2,
    ],
    "op": "lines",
    "segments": [
      66,
      84.86,
      117.28,
      84.86,
      66,
      102.57,
      117.28,
      102.57,
      66,
      120.29,
      117.28,
      120.29,
      66,
      138,
      117.28,
      138,
      66,
      155.71,
      117.28,
      155.71,
      66,
      173.43,
      117.28,
      173.43,
      66,
      191.14,
      117.28,
      191.14,
      66,
      208.86,
      117.28,
      208.86,
      66,
      226.57,
      117.28,
      226.57,
      66,
      244.29,
      117.28,
      244.29,
      66,
      262,
      117.28,
      262,
      66,
      279.71,
      117.28,
      279.71,
      66,
      297.43,
      117.28,
      297.43,
      66,
      315.14,
      117.28,
      315.14,
    ],
    "width": 0.4,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7,
    "text": "07:00",
    "weight": 400,
    "x": 36,
    "y": 86,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7,
    "text": "08:00",
    "weight": 400,
    "x": 36,
    "y": 103.71,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7,
    "text": "09:00",
    "weight": 400,
    "x": 36,
    "y": 121.43,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7,
    "text": "10:00",
    "weight": 400,
    "x": 36,
    "y": 139.14,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7,
    "text": "11:00",
    "weight": 400,
    "x": 36,
    "y": 156.86,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7,
    "text": "12:00",
    "weight": 400,
    "x": 36,
    "y": 174.57,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7,
    "text": "13:00",
    "weight": 400,
    "x": 36,
    "y": 192.29,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7,
    "text": "14:00",
    "weight": 400,
    "x": 36,
    "y": 210,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7,
    "text": "15:00",
    "weight": 400,
    "x": 36,
    "y": 227.71,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7,
    "text": "16:00",
    "weight": 400,
    "x": 36,
    "y": 245.43,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7,
    "text": "17:00",
    "weight": 400,
    "x": 36,
    "y": 263.14,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7,
    "text": "18:00",
    "weight": 400,
    "x": 36,
    "y": 280.86,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7,
    "text": "19:00",
    "weight": 400,
    "x": 36,
    "y": 298.57,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 7,
    "text": "20:00",
    "weight": 400,
    "x": 36,
    "y": 316.29,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "Priorities",
    "weight": 600,
    "x": 137.28,
    "y": 84,
  },
  {
    "fill": null,
    "h": 8,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 8,
    "width": 0.5,
    "x": 137.28,
    "y": 90,
  },
  {
    "fill": null,
    "h": 8,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 8,
    "width": 0.5,
    "x": 137.28,
    "y": 112,
  },
  {
    "fill": null,
    "h": 8,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 8,
    "width": 0.5,
    "x": 137.28,
    "y": 134,
  },
  {
    "fill": null,
    "h": 8,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 8,
    "width": 0.5,
    "x": 137.28,
    "y": 156,
  },
  {
    "fill": null,
    "h": 8,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 8,
    "width": 0.5,
    "x": 137.28,
    "y": 178,
  },
  {
    "fill": null,
    "h": 8,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 8,
    "width": 0.5,
    "x": 137.28,
    "y": 200,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "Notes",
    "weight": 600,
    "x": 137.28,
    "y": 248,
  },
]
`;

exports[`paper templates > plannerMonthly on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 9,
    "text": "Month",
    "weight": 600,
    "x": 36,
    "y": 50,
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      36,
      64,
      180,
      64,
    ],
    "width": 1,
  },
  {
    "align": "center",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "Mon",
    "weight": 400,
    "x": 46.29,
    "y": 78,
  },
  {
    "align": "center",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "Tue",
    "weight": 400,
    "x": 66.86,
    "y": 78,
  },
  {
    "align": "center",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "Wed",
    "weight": 400,
    "x": 87.43,
    "y": 78,
  },
  {
    "align": "center",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "Thu",
    "weight": 400,
    "x": 108,
    "y": 78,
  },
  {
    "align": "center",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "Fri",
    "weight": 400,
    "x": 128.57,
    "y": 78,
  },
  {
    "align": "center",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "Sat",
    "weight": 400,
    "x": 149.14,
    "y": 78,
  },
  {
    "align": "center",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "Sun",
    "weight": 400,
    "x": 169.71,
    "y": 78,
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      36,
      84,
      180,
      84,
      36,
      124,
      180,
      124,
      36,
      164,
      180,
      164,
      36,
      204,
      180,
      204,
      36,
      244,
      180,
      244,
      36,
      284,
      180,
      284,
      36,
      324,
      180,
      324,
      36,
      84,
      36,
      324,
      56.57,
      84,
      56.57,
      324,
      77.14,
      84,
      77.14,
      324,
      97.71,
      84,
      97.71,
      324,
      118.29,
      84,
      118.29,
      324,
      138.86,
      84,
      138.86,
      324,
      159.43,
      84,
      159.43,
      324,
      180,
      84,
      180,
      324,
    ],
    "width": 0.5,
  },
]
`;

exports[`paper templates > plannerWeekly on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 9,
    "text": "Week of",
    "weight": 600,
    "x": 36,
    "y": 50,
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      36,
      64,
      180,
      64,
    ],
    "width": 1,
  },
  {
    "fill": null,
    "h": 55,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 67,
    "width": 0.5,
    "x": 36,
    "y": 74,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "Monday",
    "weight": 600,
    "x": 42,
    "y": 87,
  },
  {
    "color": "#cadcf1",
    "dash": [
      1.5,
      2,
    ],
    "op": "lines",
    "segments": [
      42,
      114,
      97,
      114,
      119,
      114,
      174,
      114,
      42,
      179,
      97,
      179,
      119,
      179,
      174,
      179,
      42,
      244,
      97,
      244,
      119,
      244,
      174,
      244,
      42,
      309,
      97,
      309,
      119,
      309,
      174,
      309,
    ],
    "width": 0.4,
  },
  {
    "fill": null,
    "h": 55,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 67,
    "width": 0.5,
    "x": 113,
    "y": 74,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "Tuesday",
    "weight": 600,
    "x": 119,
    "y": 87,
  },
  {
    "fill": null,
    "h": 55,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 67,
    "width": 0.5,
    "x": 36,
    "y": 139,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "Wednesday",
    "weight": 600,
    "x": 42,
    "y": 152,
  },
  {
    "fill": null,
    "h": 55,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 67,
    "width": 0.5,
    "x": 113,
    "y": 139,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "Thursday",
    "weight": 600,
    "x": 119,
    "y": 152,
  },
  {
    "fill": null,
    "h": 55,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 67,
    "width": 0.5,
    "x": 36,
    "y": 204,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "Friday",
    "weight": 600,
    "x": 42,
    "y": 217,
  },
  {
    "fill": null,
    "h": 55,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 67,
    "width": 0.5,
    "x": 113,
    "y": 204,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "Saturday",
    "weight": 600,
    "x": 119,
    "y": 217,
  },
  {
    "fill": null,
    "h": 55,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 67,
    "width": 0.5,
    "x": 36,
    "y": 269,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "Sunday",
    "weight": 600,
    "x": 42,
    "y": 282,
  },
  {
    "fill": null,
    "h": 55,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 67,
    "width": 0.5,
    "x": 113,
    "y": 269,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "Notes",
    "weight": 600,
    "x": 119,
    "y": 282,
  },
]
`;

exports[`paper templates > ruledCollege on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      0,
      60.75,
      216,
      60.75,
      0,
      81,
      216,
      81,
      0,
      101.25,
      216,
      101.25,
      0,
      121.5,
      216,
      121.5,
      0,
      141.75,
      216,
      141.75,
      0,
      162,
      216,
      162,
      0,
      182.25,
      216,
      182.25,
      0,
      202.5,
      216,
      202.5,
      0,
      222.75,
      216,
      222.75,
      0,
      243,
      216,
      243,
      0,
      263.25,
      216,
      263.25,
      0,
      283.5,
      216,
      283.5,
      0,
      303.75,
      216,
      303.75,
      0,
      324,
      216,
      324,
    ],
    "width": 0.5,
  },
  {
    "color": "#e07a6a",
    "dash": null,
    "op": "lines",
    "segments": [
      72,
      0,
      72,
      360,
    ],
    "width": 0.75,
  },
]
`;

exports[`paper templates > ruledNarrow on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      0,
      54,
      216,
      54,
      0,
      72,
      216,
      72,
      0,
      90,
      216,
      90,
      0,
      108,
      216,
      108,
      0,
      126,
      216,
      126,
      0,
      144,
      216,
      144,
      0,
      162,
      216,
      162,
      0,
      180,
      216,
      180,
      0,
      198,
      216,
      198,
      0,
      216,
      216,
      216,
      0,
      234,
      216,
      234,
      0,
      252,
      216,
      252,
      0,
      270,
      216,
      270,
      0,
      288,
      216,
      288,
      0,
      306,
      216,
      306,
      0,
      324,
      216,
      324,
      0,
      342,
      216,
      342,
    ],
    "width": 0.5,
  },
  {
    "color": "#e07a6a",
    "dash": null,
    "op": "lines",
    "segments": [
      72,
      0,
      72,
      360,
    ],
    "width": 0.75,
  },
]
`;

exports[`paper templates > ruledWide on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      0,
      74.25,
      216,
      74.25,
      0,
      99,
      216,
      99,
      0,
      123.75,
      216,
      123.75,
      0,
      148.5,
      216,
      148.5,
      0,
      173.25,
      216,
      173.25,
      0,
      198,
      216,
      198,
      0,
      222.75,
      216,
      222.75,
      0,
      247.5,
      216,
      247.5,
      0,
      272.25,
      216,
      272.25,
      0,
      297,
      216,
      297,
      0,
      321.75,
      216,
      321.75,
    ],
    "width": 0.5,
  },
  {
    "color": "#e07a6a",
    "dash": null,
    "op": "lines",
    "segments": [
      72,
      0,
      72,
      360,
    ],
    "width": 0.75,
  },
]
`;

exports[`paper templates > storyboard on an index card matches its snapshot 1`] = `
[
  {
    "color": "#ffffff",
    "op": "fill",
  },
  {
    "fill": null,
    "h": 35.44,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 63,
    "width": 1,
    "x": 36,
    "y": 36,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "1",
    "weight": 400,
    "x": 41,
    "y": 47,
  },
  {
    "color": "#cadcf1",
    "dash": null,
    "op": "lines",
    "segments": [
      36,
      95.44,
      99,
      95.44,
      36,
      111.44,
      99,
      111.44,
      117,
      95.44,
      180,
      95.44,
      117,
      111.44,
      180,
      111.44,
      36,
      188.88,
      99,
      188.88,
      36,
      204.88,
      99,
      204.88,
      117,
      188.88,
      180,
      188.88,
      117,
      204.88,
      180,
      204.88,
      36,
      282.31,
      99,
      282.31,
      36,
      298.31,
      99,
      298.31,
      117,
      282.31,
      180,
      282.31,
      117,
      298.31,
      180,
      298.31,
    ],
    "width": 0.5,
  },
  {
    "fill": null,
    "h": 35.44,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 63,
    "width": 1,
    "x": 117,
    "y": 36,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "2",
    "weight": 400,
    "x": 122,
    "y": 47,
  },
  {
    "fill": null,
    "h": 35.44,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 63,
    "width": 1,
    "x": 36,
    "y": 129.44,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "3",
    "weight": 400,
    "x": 41,
    "y": 140.44,
  },
  {
    "fill": null,
    "h": 35.44,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 63,
    "width": 1,
    "x": 117,
    "y": 129.44,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "4",
    "weight": 400,
    "x": 122,
    "y": 140.44,
  },
  {
    "fill": null,
    "h": 35.44,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 63,
    "width": 1,
    "x": 36,
    "y": 222.88,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "5",
    "weight": 400,
    "x": 41,
    "y": 233.88,
  },
  {
    "fill": null,
    "h": 35.44,
    "op": "rect",
    "stroke": "#cadcf1",
    "w": 63,
    "width": 1,
    "x": 117,
    "y": 222.88,
  },
  {
    "align": "left",
    "color": "#6f7682",
    "op": "text",
    "size": 8,
    "text": "6",
    "weight": 400,
    "x": 122,
    "y": 233.88,
  },
]
`;
